--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -5286,6 +5286,101 @@ Milde Verallgemeinerung:
   \end{proof}
 \end{fakt}
 
+\todo{Vorlesung vom 2008-02-06}
+
+% Vorlesung vom 2008-02-08
+
+\paragraph{Das \textsc{Deli}sche Problem}
+Man konstruiere (mit Zirkel und Lineal) die Seitenl‰nge eines Kubus vom
+Volumen~2. ‹bersetzt in unser Kalk¸l: Ist $\sqrt[3]{2}\in r_{2}(\Q)$? Die
+Antwort ist offensichtlich: Nein! Denn $f=X^{3}-2\in\Q[X]$ ist irreduzibel in
+$\Q$ nach \textsc{Eisenstein}. Also ist $[\Q(\sqrt[3]{2}\colon\Q]=3]$. Denn
+w‰re $\sqrt[3]{2}\in r_{2}(\Q)$, so w‰re $[\Q(\sqrt[3]{2})\colon\Q]=2^{N}$
+\lightning{}
+
+\paragraph{Quadratur des Kreises}
+Man konstruiere mit Zirkel und Lineal aus einem Kreis ein gleichgroﬂes
+Quadrat. Die ‹bersetzung in unser Kalk¸l: $\sqrt{\pi}\in r_{2}(\Q)$? Die
+Antwort ist nein. Der Mathematiker \textsc{Lindemann} hat Ende des
+19.\,Jahrhunderts gezeigt, dass $\pi$ nicht algebraisch ¸ber $\Q$ ist.
+
+\paragraph{Konstruktion von regelm‰ﬂigen $n$"~Ecken}
+‹bersetzung in unser Kalk¸l: f¸r welche $n\geq3$ ist die $n$"~te Einheitswurzel in
+$r_{2}(\Q)$?
+%satz 9
+\begin{satz}[\textsc{Gauss}]
+  $e^{\nicefrac{2\pi i}{n}}\in r_{2}(\Q)\Leftrightarrow
+  n=2^{r}p_{1}\cdot\dotso \cdot p_{s}$. Die $p_{i}$ sind verschiedene ungerade
+  Primzahlen der Form $2^{2^{n}}+1$ (so genannte \textsc{Fermat}"~Primzahlen).
+  \begin{proof}
+    \begin{itemize}
+     \item["`$\Leftarrow$"'] Sei also $n=2^{r}p_{1}\cdot\dotso \cdot p_{s}$.
+      Es ist $\zeta_{p_{j}}= e^{2\pi ip_{j}}\in r_{2}(\Q)$, denn $\Irr(X,
+      \zeta_{p_{j}}, \Irr)= 1+X+\dotsb+X^{p_{j}-1}= \frac{X^{p_{j}}-1}{X-1}$.
+      Also ist $[\Q(\zeta_{p_{j}})\colon\Q]=p_{j}-1= 2^{2^{n}}$. Auﬂerdem ist die
+      \textsc{Galois}gruppe $\Gal(\Q(\zeta_{p_{j}})/_{\Q})$ zyklisch. Nach der
+      \textsc{Galois}"~Theorie ist $\Q(\zeta_{p_{j}})= K_{n}\supset
+      K_{n-1}\supset\dotso \supset K_{0}=\Q$ mit $[K_{r+1}\colon K_{r}]=2$.
+
+      Mit $\zeta_{n}\in r_{2}(\Q)$ ist auch $\zeta_{2n}\in r_{2}(\Q)$, denn
+      $\zeta_{2n}= \sqrt{\zeta_{n}}$. Mit $\zeta_{a}, \zeta_{b}$ und
+      $\ggt(a,b)=1$ ist auch $\zeta_{ab}\in r_{2}(\Q)$. W‰hle $x,y\in\Z$ so,
+      dass $xa+yb=1$ ist. Dann folgt, $\zeta_{ab}= \zeta_{ab}^{xa+yb}=
+      \zeta_{b}^{x} \zeta_{a}^{y} \in r_{2}(\Q)$.
+     \item["`$\Rightarrow$"'] Hierf¸r m¸ssen wir zuerst das Lemma nachweisen:\\
+      Sei $p>2$ eine Primzahl. Dann gilt,, $[\Q(\zeta_{p^{2}})\colon\Q]=
+      p(p-1)$.
+      \begin{proof}
+	Wir schreiben: $f(X)= \Irr(X, \zeta_{p}, \Q)= \frac{X^{p}-1}{X-1}=
+	1+X+\dotsb+X^{p-1}$ und $g(X)= \Irr(X, \zeta_{p^{2}}, \Q)$. Es ist
+	$f(X^{p})= X^{p(p-1)}+ X^{p(p-2)}+\dotsb+ X^{p}+1$. Wir betrachten,
+	$f((X+1)^{p})= (X+1)^{p(p-1)}+\dotsb+ (X+1)^{p}+1\equiv
+	(X^{p}+1)^{p-1}+\dotsb+ (X^{p}+1)+1 \pmod{p}=
+	\frac{(X^{p}+1)^{p}-1}{X^{p}} \equiv X^{p^{2}-p} \pmod{p}$ Damit ist
+	$f((X+1)^{p})$ irreduzibel ¸ber $\Q$ nach \textsc{Eisenstein} und es
+	folgt, dass auch $f(X^{p})$ irreduzibel ¸ber $\Q$ ist.
+      \end{proof}
+      Sei $\zeta_{n}\in r_{2}(\Q)$ und $p>2$ prim mit $p^{2}\mid n$. Dann ist
+      auch $\zeta_{p^{2}}\in r_{2}(\Q)$. Aber $[\Q(\zeta_{p^{2}})\colon\Q]$
+      ist keine Zweierpotenz. Mithin $n=2^{r}p_{1}\cdot\dotso \cdot p_{s}$ mit
+      verschiedenen $p_{i}$. F¸r jedes $p_{i}$ muss gelten:
+      $[\Q(\zeta_{p_{i}})\colon\Q]= 2^{a_{i}}$. Sei $p=p_{i}, p=2^{a}+1$ und
+      $s$ ungerade. Dann ist $2^{rs}+1= (2^{r}+1)((2^{r})^{s-1}-
+      (2^{r})^{s-2}+\dotsb- (2^{r})+1)\Rightarrow a$ ist eine Zweierpotenz.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item \textsc{Gauss} hat entdeckt, dass das 17"~Eck konstruierbar ist.
+   \item Es ist nicht bekannt, ob es unendlich viele prime $F_{n}=
+    2^{2^{n}}+1$ gibt.
+   \item Es gibt mehr nicht konstruierbare, als konstruierbare regelm‰ﬂige
+    $n$"~Ecke.
+  \end{enumerate}
+\end{bemerk}
+
+\paragraph{Dreiteilung von Winkeln}
+Manchmal geht es und manchmal nicht. Der Winkel von 60\textdegree* ist
+konstruierbar. Das regelm‰ﬂige Sechseck ist konstruierbar. Der Winkel von
+60\textdegree* ist nicht dreiteilbar, da das regelm‰ﬂige 18"~Eck \emph{nicht}
+konstruierbar ist.
+
+\paragraph{Konstruktion von Dreiecken mit zwei gegebenen Seitenl‰ngen und der
+  L‰nge einer Winelhalbierenden}
+Seien $a=b=w=1$. Solche Dreiecke existieren. Also haben wir folgende
+Situation: \todo{Zeichung}
+Das gibt $2\alpha+\nicefrac{\beta}{2}= \pi$ (unteres Dreieck) und
+$\alpha+2\beta=\pi$ (groﬂes Dreieck). Also ergibt dies $\alpha=\nicefrac{3}{7}
+\pi$. Angenommen $P$ ist konstruierbar, dann ist $P=e^{\pi i\nicefrac{3}{7}}$.
+Die dritte Potenz ist $e^{\pi i\nicefrac{2}{7}}= \zeta_{7}$ (Ecke des
+regelm‰ﬂigen Siebenecks, also \emph{nicht} konstruierbar.
+
+Zur ‹bung: Ist neben zwei Seitenl‰ngen die L‰nge der Winkelhalbierenden
+zwischen den beiden Seiten gegeben, so ist das Dreieck konstruierbar.
+
+
 
 \appendix
 
