--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -798,9 +798,8 @@ Drehgruppen regulärer Vielecke veranschaulichen.
       Dann ist $y = x^n$ für ein $n \in \N$ und $\ggt (n, d) = \delta$ für $0
       < \delta \leq d$. Elementare Arithmetik ergibt: $\exists \alpha, \beta
       \in \Z\colon \delta =  \alpha n + \beta d$. Weiter ist $x^{\delta} =
-      \underbrace{= y^{\alpha}}_{x^{\alpha n}} x^{\beta d} \in H\Rightarrow
-      \delta = d$ wegen der Minimalität von $d$. Mithin $d / n$ \help{muss das
-      nicht $d\mid n$ heißen?}, somit $H =
+      x^{\alpha n}x^{\beta d}= y^{\alpha} x^{\beta d} \in H\Rightarrow
+      \delta = d$ wegen der Minimalität von $d$. Mithin $d \mid n$, somit $H =
       \langle x^d \rangle$.
     \end{enumerate}
   \end{enumerate}
