- Fehler korrigiert - Beweis zum Satz von Cayley ausgebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@1325 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -483,7 +483,7 @@ Wir verabreden folgende Bezeichnungen:
 \end{fakt}
 
 \begin{defini}
-  Die kleinste $S$ umfassende Untergruppe heiﬂt die von $S$ \highl{erzeugte
+  Die kleinste $S$ umfassende Untergruppe heiﬂt die von $s$ \highl{erzeugte
   Untergruppe}. Bezeichnung: $\langle s\rangle$
 \end{defini}
 
@@ -622,7 +622,7 @@ Inverse.
 
 \begin{bsp}
   Es gilt $10\equiv1\pmod{9}\Rightarrow10^{n}\equiv1\pmod{9}$. Damit gilt f¸r
-  die Quersumme: $N=\sum_{r=0}^{\infty} a_{r}10^{r}= \sum_{r=0}^{\infty}
+  die Quersumme: $N=\sum_{r=0}^{\infty} a_{r}10^{r}\equiv \sum_{r=0}^{\infty}
   a_{r}\pmod{9}$.
 \end{bsp}
 
@@ -841,33 +841,32 @@ Drehgruppen regul‰rer Vielecke veranschaulichen.
   $\card S_n = n!$
 \end{bemerk}
 
-\begin{fakt}
+\begin{fakt}[Satz von Cayley]
   Jede endliche Gruppe ist isomorph zu einer Untergruppe einer
   Permutationsgruppe.
-\end{fakt}
-
 \begin{proof}
   Sei $G$ endliche Gruppe mit $\card G = n$.
-  Wir bilden $G$ nach $S_n$ ab: Jedes $g \in G$ verursacht durch
+  Jedes $g \in G$ verursacht durch
   Linksmultiplikation eine Abbildung von $l_g\colon G \rightarrow
-  G\colon x \mapsto gx$. ($l_g$ im allgemeinen kein Homomorphismus)
-  
-  Also Abbildung $l\colon G \rightarrow S (X)$, $X = G$ , $l_g$ ist stets
-  Bijektion.
+  G, x \mapsto gx$. Im Allgemeinen ist $l_g$ kein Homomorphismus. Da $G$ eine
+  Gruppe ist, ist die Linksmultiplikation jedoch sogar ein Isomorphismus.
+  Damit ist jede der Abbildungen eine Bijektion und alle Abbildungen bilden
+  eine Teilmenge der Permutationsgruppe. Nun ist noch zu zeigen, dass diese
+  Teilmenge eine Untergruppe ist.
   
   Wir zeigen (i) $l$ ist Homomorphismus, (ii) $l$ ist injektiv.
   \begin{enumerate}[(i)]
-    \item $l_g l_h = l_{g h}$ ist zu zeigen:
-    
+    \item $l_g l_h = l_{g h}$ ist zu zeigen:    
     $l_g (l_h (x)) = l_g (hx) = ghx = l_{g h} (x)$
     
     \item $l_g = l_h \Rightarrow gx = hx \Rightarrow g = h$
   \end{enumerate}
 \end{proof}
+\end{fakt}
 
 \begin{defini}
   Eine Permutation heiﬂt \highl{Zyklus}, wenn
-  $x_1, x_2, \ldots, x_m \in \{1, 2, \ldots, n\}$ $m \geqslant 2$, paarweise
+  $x_1, x_2, \ldots, x_m \in \{1, 2, \ldots, n\}$ $m \geq 2$, paarweise
   verschieden existieren, so dass
   \begin{enumerate}
     \item $\sigma x_1 = x_2, \sigma x_2 = x_3, \ldots, \sigma x_m = x_1$
