--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -5598,6 +5598,37 @@ von den anderen Inhalten zu betrachten.
   $\begin{pmatrix}1& t\\ 0 & 1 \end{pmatrix}$ für $t\in\R$.
 \end{enumerate}
 
+\section*{2. Übungsserie}
+
+\begin{enumerate}
+ \item Finden Sie Teilbarkeitsregeln für 7, 11 und 13 (Hinweis:
+  $7\cdot11\cdot13=1001$).
+ \item Bestimmen Sie alle Untergruppen von $S_{4}$ und geben Sie an, welche
+  von ihnen Normalteiler sind.
+ \item Sei $G$ eine Gruppe und $G'$ die von allen Elementen $aba^{-1}b^{-1}$
+  erzeugte Untergruppe für $a,b\in G$. Zeigen Sie:
+  \begin{enumerate}
+   \item $G'$ ist ein Normalteiler in $G$.\\
+    Sei $g\in G$. Dann gilt
+    \begin{align*}
+      gGg^{-1} &= \{g(aba^{-1}b^{-1})g^{-1}\colon a,b\in G\}\\
+      &= \{(gag^{-1}) (gbg^{-1})(ga^{-1}g^{-1}) (gb^{-1}g^{-1})\colon
+    a,b\in G\}\\
+      &= \{(gag^{-1})(gbg^{-1}) (g^{-1}ag)^{-1}(g^{-1}bg)^{-1}\colon
+    a,b\in G\}\\
+      &= \{aba^{-1}b^{-1}\colon a,b\in gGg^{-1}\}=G'
+    \end{align*}
+   \item $G^{ab}=G/_{G'}$ ist abelsch
+   \item ist $N\subset G$ ein Normalteiler mit $G/_{N}$ abelsch, so gilt
+    $N\supset G'$.
+  \end{enumerate}
+ \item Berechnen Sie $G^{ab}$ für $G=S_{3}, S_{4}, S_{5}$.
+ \item Sei $k\in\N$ und in der Gruppe $G$ gelte $(ab)^{n}=a^{n}b^{n}$ für alle
+  $a,b\in G$ und $n=k, k+1, k+2$. Zeigen Sie, dass $G$ abelsch ist.
+ \item Zeigen Sie: $\Z/_{m\Z}\times\Z/_{n\Z}$ ist zyklisch $\Leftrightarrow$
+  die $n$ teilerfremd sind.
+\end{enumerate}
+
 \section*{3. Übungsserie}
 
 \begin{enumerate}
