- ein paar Aeste machen noch keinen Baum (Dank an Joerg)
git-svn-id: https://svn.lug-jena.de/uni-skripte@1327 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -392,13 +392,13 @@ Wir verabreden folgende Bezeichnungen:
   \begin{enumerate}
    \item Die triviale Gruppe $\{e\}$.
    \item $\Z$ mit der Addition $+$
-   \item $\Q, \R, \C$ mit der Addition oder $\Q^{\ast}, \R^{\ast}, \C^{\ast}$ mit der
+   \item $\Q, \R, \C$ mit der Addition oder $\Q^{*}, \R^{*}, \C^{*}$ mit der
     Multiplikation.
    \item Ein \highl{Körper} ist eine nichtleere Menge $K$ mit zwei Operationen, die man
     traditionell Addition und Multiplikation nennt:
     \begin{enumerate}
      \item $K$ ist mit der Addition eine kommutative Gruppe.
-     \item $K^{\ast}=K\setminus\{0\}$ ist mit der Multiplikation eine kommutative Gruppe.
+     \item $K^{*}=K\setminus\{0\}$ ist mit der Multiplikation eine kommutative Gruppe.
      \item Distributivität: $x(y+z)=xy+xz$ mit $x,y,z\in K$.
     \end{enumerate}
    \item Permutationsgruppen: Sei $X$ eine Menge und $S(X)$ sind alle
@@ -450,8 +450,8 @@ Wir verabreden folgende Bezeichnungen:
 \begin{bsp}
   \begin{enumerate}
    \item $G\rightarrow\{1\}, \{1\}\rightarrow G$
-   \item $\det\colon\GL(n,K)\rightarrow K^{\ast}$
-   \item $\C\rightarrow\C^{\ast}, z\mapsto e^{2\pi iz}$
+   \item $\det\colon\GL(n,K)\rightarrow K^{*}$
+   \item $\C\rightarrow\C^{*}, z\mapsto e^{2\pi iz}$
    \item $\sgn\colon S_{n}\rightarrow\{1,-1\}$
   \end{enumerate}
 \end{bsp}
@@ -500,7 +500,7 @@ Wir verabreden folgende Bezeichnungen:
   \begin{enumerate}
    \item Sei $G$ eine Gruppe, $x\in G$. Dann ist $\langle
     x\rangle=\{x^{m}\colon m\in\Z\}$. Die \highl{Ordnung} von $x$ ist
-    $\abs{x}= \min\{n\in\N^{\ast}\colon x^{n}=1\}$.
+    $\abs{x}= \min\{n\in\N^{*}\colon x^{n}=1\}$.
    \item $\left\langle
     \begin{pmatrix}
       1 & 1\\
@@ -591,10 +591,10 @@ Wir verabreden folgende Bezeichnungen:
 \begin{bsp}
   \begin{enumerate}
    \item $\ker(\det)=\SL(n,K)$ heißt \highl{spezielle lineare Gruppe}.
-   \item $\C\rightarrow\C^{\ast}, z\mapsto e^{2\pi iz}$. Damit ist der Kern der
+   \item $\C\rightarrow\C^{*}, z\mapsto e^{2\pi iz}$. Damit ist der Kern der
     Abbildung $\Z$.
    \item $\sgn\colon S_{n}\rightarrow\{1,-1\}, \ker\sgn=A_{n}$
-   \item $\phi_{n}\colon\C^{\ast}\rightarrow\C^{\ast}, z\mapsto z^{n},
+   \item $\phi_{n}\colon\C^{*}\rightarrow\C^{*}, z\mapsto z^{n},
     n\in\N\Rightarrow \ker(\phi_{n})=\{e^{2\pi i\nicefrac{r}{n}},
     0\leq r\leq n\}$. Der Kern heißt auch \highl[Einheitswurzeln!Gruppe
     der]{Gruppe der $n$"~ten Einheitswurzeln}.
@@ -771,7 +771,7 @@ Drehgruppen regulärer Vielecke veranschaulichen.
   Zum Beispiel ist $\varphi (12) = 12 - (1 - \frac{1}{2}) (1 - \frac{1}{3}) =
   \frac{12 \cdot 2}{2 \cdot 3} = 4$.
   
-  Die Menge $(\Z/_{m\Z})^{\ast}$ der primen Restklassen modulo $m$ bildet
+  Die Menge $(\Z/_{m\Z})^{*}$ der primen Restklassen modulo $m$ bildet
   bezüglich Multiplikation eine Gruppe..
 \end{bemerk}
 
@@ -1070,30 +1070,30 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
   Sei $f\colon G\rightarrow G'$ ein Homomorphismus von Gruppen, $H=\ker(f)$.
   Dann existiert genau ein Homomorphismus:
   \begin{gather*}
-    f_{\ast}\colon G/_{H}\rightarrow G'
+    f_{*}\colon G/_{H}\rightarrow G'
   \end{gather*}
   welcher das folgende Diagramm kommutativ macht:
     \begin{gather*}
     \begin{xy}
       \xymatrix{
-      G \ar[rr]^{f} \ar[rd]_{\text{kan}} & & G'\\ %\ar@{.>}[ld]^{f_{\ast}}\\
-      & G/_{H}\ar@{.>}[ur]_{f_{\ast}} &
+      G \ar[rr]^{f} \ar[rd]_{\text{kan}} & & G'\\ %\ar@{.>}[ld]^{f_{*}}\\
+      & G/_{H}\ar@{.>}[ur]_{f_{*}} &
 	}
     \end{xy}
   \end{gather*}
-  Die Abbildung $f_{\ast}$ verursacht einen Isomorphismus zwischen $G/_{H}$ und
+  Die Abbildung $f_{*}$ verursacht einen Isomorphismus zwischen $G/_{H}$ und
   $f(G)$. \help{Sollte das nicht ein $G'$ sein?}
   \begin{proof}
     \begin{enumerate}
-     \item (Eindeutigkeit von $f_{\ast}$): Seien $f_{\ast}, f_{\ast}'$ zwei solche
-      Homomorphismen. Dann gilt $f_{\ast}(xH)=f(x)=f_{\ast}'(xH)\Rightarrow f_{\ast}'=
-      f_{\ast}$.
-     \item (Existenz von $f_{\ast}$): $f_{\ast}(xH)=f(x)$ nach Definition.
+     \item (Eindeutigkeit von $f_{*}$): Seien $f_{*}, f_{*}'$ zwei solche
+      Homomorphismen. Dann gilt $f_{*}(xH)=f(x)=f_{*}'(xH)\Rightarrow f_{*}'=
+      f_{*}$.
+     \item (Existenz von $f_{*}$): $f_{*}(xH)=f(x)$ nach Definition.
       Korrektheit: $xH=x'H\Rightarrow x'=xh, h\in H,
       f(x')=f(xh)=f(x)f(h)=f(x)$.\\
-      Homomorphie: $f_{\ast}(xyH)=f(xy)=f(x)f(y)= f_{\ast}(xH)f_{\ast}(yH)$.
-     \item (Injektivität): $f_{\ast}(xH)=1\Rightarrow f(x)=1\Rightarrow x\in H$.
-     \item $f_{\ast}(G/_{H})=f(G)$ ist klar.
+      Homomorphie: $f_{*}(xyH)=f(xy)=f(x)f(y)= f_{*}(xH)f_{*}(yH)$.
+     \item (Injektivität): $f_{*}(xH)=1\Rightarrow f(x)=1\Rightarrow x\in H$.
+     \item $f_{*}(G/_{H})=f(G)$ ist klar.
     \end{enumerate}
   \end{proof}
 \end{satz}
@@ -1102,10 +1102,10 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
   \begin{enumerate}
    \item $G=\R$ mit der Addition, $H=\Z$ ist ein Normalteiler. Was ist
     $G/_{H}= \R/_{\Z}$? Antwort: Kreislinie! Sei $\phi\colon\R\rightarrow
-    \C_{1}^{\ast}=\{z\in\C\colon\abs{z}=1\}, \phi(t)=e^{2\pi it}$ ist ein
+    \C_{1}^{*}=\{z\in\C\colon\abs{z}=1\}, \phi(t)=e^{2\pi it}$ ist ein
     Homomorphismus: $e^{z_{1}+z_{2}}= e^{z_{1}}e^{z_{2}}$ und $\ker\phi=\Z,
-    \Ima \phi=\C_{1}^{\ast}$. Nach dem Homomorphiesatz induziert $\phi$ einen
-    Isomorphismus $\R/_{\Z}\rightarrow\C_{1}^{\ast}$.
+    \Ima \phi=\C_{1}^{*}$. Nach dem Homomorphiesatz induziert $\phi$ einen
+    Isomorphismus $\R/_{\Z}\rightarrow\C_{1}^{*}$.
    \item $G=\C$ mit Addition, $H=\Z+i\Z= \{ a+bi\colon a,b\in\Z\}$. Man
     bezeichnet $H$ auch als die \highl[Zahlen!ganze \textsc{Gauss}sche]{ganzen
     \textsc{Gauss}schen Zahlen}. Damit ist $G/_{H}$ ein Torus.
@@ -1146,11 +1146,11 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
 \end{satz}
 
 \begin{bsp}
-  Sei $G=\C$ mit der Addition, $\phi\colon\C\rightarrow\C^{\ast}, e\mapsto
+  Sei $G=\C$ mit der Addition, $\phi\colon\C\rightarrow\C^{*}, e\mapsto
   e^{2\pi iz}$. Das ist ein surjektiver Homomorphismus mit dem Kern $\Z$. Sei
   $\Gamma=\Z+\Z i=\{a+bi\colon a,b\in\Z\}, \phi(\Gamma)= \{e^{-2\pi b}\colon
   b\in\Z\}$. Es folgt nach dem ersten Isomorphiesatz:
-  $\C^{\ast}/_{\phi(\Gamma)}\cong \C/_{\Z}/_{\Gamma/_{\Z}}\cong \C/_{\Gamma}$.
+  $\C^{*}/_{\phi(\Gamma)}\cong \C/_{\Z}/_{\Gamma/_{\Z}}\cong \C/_{\Gamma}$.
 \end{bsp}
 
 \section{Das direkte Produkt von Gruppen}
@@ -1321,7 +1321,7 @@ Diese Anzahl für den Exponenten $n$ bezeichnet man mit $p(n)$
 \highl{Partition}en von $n$, d.\,h. $p(n)$ ist die Anzahl von Darstellungen
 von $n$ als Summe positiver natürlicher Zahlen ohne Beachtung der Reihenfolge.
 Denn $A$ der Ordnung $l^{n}$ hat den Typ $(l^{r_{1}},\dotsc, l^{r_{k}})$ mit
-$n=r_{1}+\dotsb+ r_{k}$. Es ist $p\colon\N^{\ast}\rightarrow\N^{\ast}$. Diese
+$n=r_{1}+\dotsb+ r_{k}$. Es ist $p\colon\N^{*}\rightarrow\N^{*}$. Diese
 Abbildung ist in der Zahlentheorie von Bedeutung und hat schon Euler
 beschäftigt.
 
@@ -1602,7 +1602,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
     \sigma(1,a)\sigma^{-1}= (\sigma(1), \sigma(a))=(1,a)$. Also entweder
     $\sigma(1)=1, \sigma(a)=a$ oder $\sigma(1)=a, \sigma(a)=1$ für alle
     $a\geq2$. Damit folgt, dass $\sigma=\iota$.
-   \item $C(\GL(n,\R))=\R^{\ast}\cdot I$. Denn die Matrix $E_{ij}$ hat nur an der
+   \item $C(\GL(n,\R))=\R^{*}\cdot I$. Denn die Matrix $E_{ij}$ hat nur an der
     $ij$"~ten Stelle eine 1, sonst 0. In $AE_{ij}$ steht in der $j$"~ten
     Spalte die $i$"~te Spalte von $A$ und in $E_{ij}A$ steht in der $i$"~ten
     Zeile die $j$"~te Zeile von $A$. Weiter ist $E_{ij}E_{kl}=\delta_{jk}
@@ -1675,13 +1675,13 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
 \end{bsp}
 
 \begin{bsp}
-  Sei $G=\GL(2,\C), A\in G, \mu, \lambda\in\C^{\ast}$ ihre Eigenwerte. Ist
+  Sei $G=\GL(2,\C), A\in G, \mu, \lambda\in\C^{*}$ ihre Eigenwerte. Ist
   $\lambda\neq\mu$, so existiert eine Eigenbasis. Also ist $A$ konjugiert zu $
   \begin{pmatrix}
     \lambda & 0\\
     0 & \mu
   \end{pmatrix}$. Also für alle Paare $(\lambda,
-  \mu)\in\C^{\ast}\times\C^{\ast}\setminus \diag(\C^{\ast})$ Konjugationsklasse
+  \mu)\in\C^{*}\times\C^{*}\setminus \diag(\C^{*})$ Konjugationsklasse
   $c(\lambda,\mu)$. Außer der Relation $c(\lambda,\mu)=c(\mu,\lambda)$ sind
   die Klassen verschieden. Sei nun $\lambda=\mu$.
   \begin{enumerate}[1. F{a}ll]
@@ -1690,7 +1690,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
       \lambda & 0\\
       0 & \lambda 
     \end{pmatrix}$. Also sogar gleich. Damit gibt es einelementige
-    Konjugationsklassen $c(\lambda), \lambda\in\C^{\ast}$.
+    Konjugationsklassen $c(\lambda), \lambda\in\C^{*}$.
    \item Es gibt keine Eigenbasis. Aber es existiert ein Eigenvektor zu
     $\lambda$. Damit folgt: $A$ ist konjugiert zu $
     \begin{pmatrix}
@@ -1902,7 +1902,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
       1 &  & * \\
       & \ddots & \\
       0 &  & 1
-    \end{pmatrix}\colon \ast\in \F_p \right\}$.
+    \end{pmatrix}\colon *\in \F_p \right\}$.
   \end{enumerate}
 \end{bsp}
 
@@ -2117,7 +2117,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
     $\tau_1 \tau^{- 1}$ lässt alle Zahlen größer als 4 fest. $\lightning$
     
     \item $\tau_1 = (2, 3, 4) (1, 2, 3) \sigma_2 \ldots (2, 4, 3) \sigma_3
-    \ldots \sigma_m = (1, 2, 3) (2, 5, \ast) \sigma_3, \ldots, \sigma_m$.
+    \ldots \sigma_m = (1, 2, 3) (2, 5, *) \sigma_3, \ldots, \sigma_m$.
     Damit lässt $\tau_1 \tau^{- 1}$ alles außer $1, 2, 3, 4, 5$ fest: 
     $\tau_1 \tau^{- 1} = (1, 3, 4) (2, 5, 6) (1, 3, 2) (4, 6, 5) = (1, 3, 4)
     (2, 5, 6) (4, 6, 5) (1, 3, 2) = (1, 4, 2, 3, 5)$. Also     
@@ -2163,7 +2163,7 @@ Motto: Weiche, Wotan, weiche.
 \end{bemerk}
 
 \begin{defini}
-  Wir definieren $A^{\ast}$ als die Menge der multiplikativ invertierbaren
+  Wir definieren $A^{*}$ als die Menge der multiplikativ invertierbaren
   Elemente.
 \end{defini}
 
@@ -2173,7 +2173,7 @@ Motto: Weiche, Wotan, weiche.
 \end{defini}
 
 \begin{fakt}
-  $A^{\ast}$ ist abelsche Gruppe.
+  $A^{*}$ ist abelsche Gruppe.
 \end{fakt}
 
 \begin{bsp}
@@ -2184,7 +2184,7 @@ Motto: Weiche, Wotan, weiche.
     \item Sei $M$ eine offene Teilmenge in
     $\R^n$. Dann sind  $C (M, \R),  C^n (M, \R),  C^{\infty} (M, \R)$ Ringe.
     
-    \item Sei $A = L^1 (\R^n, \B, d \lambda)$ mit der Faltung: $(f \ast g) (x)
+    \item Sei $A = L^1 (\R^n, \B, d \lambda)$ mit der Faltung: $(f * g) (x)
     = \int_{\R^{n}} f (y) g (x - y)\,d \lambda (y)$.    
     Damit wird $A$ zu kommutativem Ring, allerdings ohne 1.
     
@@ -2198,7 +2198,7 @@ Motto: Weiche, Wotan, weiche.
     $\varepsilon = 3 + 2 \sqrt{2}$ ist Einheit: $(3 + 2 \sqrt{2}) (3 - 2
     \sqrt{2}) = 1$. Jedes $\varepsilon^m$ mit $m \in \Z$ ist Einheit.
   \end{enumerate}
-%    Ein Ring $A$ ist K\"orper $\Leftrightarrow A^{\ast} = A \backslash
+%    Ein Ring $A$ ist K\"orper $\Leftrightarrow A^{*} = A \backslash
 %    \{0\}$.
 \end{bsp}
 
@@ -2257,7 +2257,7 @@ Hierzu sei $f\colon A \rightarrow B$ ein Homomorphismus, $A,B$ Ringe und $\fa=
   In $\Z$ ist jedes Ideal ein Hauptideal. Diese heißen
   \highl{Hauptidealring}e.  
   Es gilt: $(a) = (b) \Leftarrow b = \varepsilon a$ mit $\varepsilon \in
-  A^{\ast}$
+  A^{*}$
 \end{bemerk}
 
 \section{Operationen mit Idealen}
@@ -2270,7 +2270,7 @@ $\fa+\fb\coloneqq\{a + b\colon a \in \fa, b \in \fb\}$
   Seien $\fa, \fb$ Ideale in $A$. Dann ist
   \begin{gather*}
     \fa\fb\coloneqq\left\{\sum_{i=1}^{r} a_{i}b_{i}\colon a_{i}\in\fa, b_{i}\in\fb,
-       r\in\N^{\ast}\right\}
+       r\in\N^{*}\right\}
   \end{gather*}
   wieder ein Ideal in $A$.
 \end{fakt}
@@ -2330,12 +2330,12 @@ bezüglich $+$. Wir prägen $A/_{\fa}$ eine Multiplikation auf via
 \begin{satz}[Homomorphiesatz]
   \label{satz:1-homoring}
   Sei $f\colon A\rightarrow B$ ein Ringhomomorphismus und $\fa=\ker(f)$. Dann
-  existiert genau ein Homomorphismus $f_{\ast}\colon A/_{\fa}\rightarrow B$,
+  existiert genau ein Homomorphismus $f_{*}\colon A/_{\fa}\rightarrow B$,
   welcher das folgende Diagramm kommutativ ergänzt:
       \begin{gather*}
     \begin{xy}
       \xymatrix{
-      A \ar[rr]^{f} \ar[rd]_{\text{kan}} & & B\ar@{<.}[dl]^{f_{\ast}}\\
+      A \ar[rr]^{f} \ar[rd]_{\text{kan}} & & B\ar@{<.}[dl]^{f_{*}}\\
       & A/_{\fa} &
 	}
     \end{xy}
@@ -2343,9 +2343,9 @@ bezüglich $+$. Wir prägen $A/_{\fa}$ eine Multiplikation auf via
   vulgarisiert: Ring durch Kern gleich Bild.
   \begin{proof}
     Für die unterliegenden additiven Gruppen ist der Satz bereits bewiesen
-    (\autoref{satz:2}). Nun ist noch zu zeigen: $f_{\ast}$ ist
-    Ringhomomorphismus: $f_{\ast}(x+\fa)=f(x)$. Somit ist $f_{\ast}((x+\fa)(y+\fa))=
-    f_{\ast}(xy+\fa)=f(xy)$ und $f_{\ast}(x+\fa)f_{\ast}(y+\fa)=f(x)f(y)= f(xy)$.
+    (\autoref{satz:2}). Nun ist noch zu zeigen: $f_{*}$ ist
+    Ringhomomorphismus: $f_{*}(x+\fa)=f(x)$. Somit ist $f_{*}((x+\fa)(y+\fa))=
+    f_{*}(xy+\fa)=f(xy)$ und $f_{*}(x+\fa)f_{*}(y+\fa)=f(x)f(y)= f(xy)$.
   \end{proof}
 \end{satz}
 
@@ -2458,7 +2458,7 @@ $xy=0$.
   \begin{proof}
     Sei $A\xrightarrow{f} B \xrightarrow{\text{kan}} B/_{\fm'}$. Der Kern dieses
     Homomorphismus ist $\fm=f^{-1}(\fm')$. Also erhält man aus dem
-    Homomorphiesatz einen Isomorphismus: $f_{\ast}\colon A/_{\fm}\rightarrow
+    Homomorphiesatz einen Isomorphismus: $f_{*}\colon A/_{\fm}\rightarrow
     B/_{\fm'}$. Damit ist auch $A/_{\fm}$ ein Körper.
   \end{proof}
 \end{fakt}
@@ -2505,7 +2505,7 @@ Allgemeinen nicht prim (maximal), selbst für surjektive Homomorphismen.
 \begin{enumerate}
  \item Die Mutter aller Ringe: $\Z$ mit den Einheiten $\{1,-1\}$, den
   Primidealen $(0), (p)$ mit $p\in\PP$ und den maximalen Idealen $(p)$. Man
-  kann zeigen: $\F_{p}^{\ast}$ ist zyklisch.
+  kann zeigen: $\F_{p}^{*}$ ist zyklisch.
 
   \emph{Hauptsatz der elementaren Arithmetik}: Jede ganze Zahl ungleich 0 ist
   eindeutig darstellbar als Produkt aus einer Einheit und endlich vielen
@@ -2514,7 +2514,7 @@ Allgemeinen nicht prim (maximal), selbst für surjektive Homomorphismen.
   a,b\in\Z\}$. Der Ring ist integer, da er in $\C$ liegt. Die \highl{Norm}
   $N\colon\Z[i]\rightarrow\Z, a+bi\mapsto a^{2}+b^{2}=(a+bi)(\overline{a+bi})$
   ist Einheit in $\Z[i]$, so auch $N(x)$ in $\Z$. Mithin ist
-  $N(x)=a^{2}+b^{2}=\pm1\Rightarrow\Z[i]^{\ast}=\{1,-1,i,-i\}$.
+  $N(x)=a^{2}+b^{2}=\pm1\Rightarrow\Z[i]^{*}=\{1,-1,i,-i\}$.
 
   Wir zeigen, $\Z[i]$ ist ein Hauptidealring. Hierfür beweisen wir zunächst
   die folgende Aussage:\\
@@ -2608,10 +2608,10 @@ Sei $A$ integer.
   Reihenfolge und Einheiten eindeutig ist:
   \begin{enumerate}[(i)]
    \item $\forall a\in A, a\neq0\,\exists p_{1},\dotsc, p_{n}\in A$ prim,
-    $u\in A^{\ast}\colon a=up_{1}\cdot\dotso \cdot p_{n}$
+    $u\in A^{*}\colon a=up_{1}\cdot\dotso \cdot p_{n}$
    \item $a=up_{1}\cdot\dotso \cdot p_{m}=vq_{1}\cdot\dotso \cdot q_{n}$ mit
-    $u,v\in A^{\ast}, p_{i}, q_{j}\in A$ prim $\Rightarrow m=n$ und es existiert
-    ein $\sigma\in S_{n}, u_{i}\in A^{\ast}$ mit $q_{i}=up_{\sigma(i)}$
+    $u,v\in A^{*}, p_{i}, q_{j}\in A$ prim $\Rightarrow m=n$ und es existiert
+    ein $\sigma\in S_{n}, u_{i}\in A^{*}$ mit $q_{i}=up_{\sigma(i)}$
   \end{enumerate}
 \end{defini}
 
@@ -2644,14 +2644,14 @@ Sei $A$ integer.
 	$1,p$ bis auf Einheiten und $p$ scheidet als Teiler von $a$ aus. Wir
 	betrachten $(a)+(p)=\{ax+py\colon x,y\in A\}$ und zeigen, dass es $A$
 	ist. Man kann schreiben: $(a)+(p)=(z)$ und es folgt, $z\mid a, z\mid
-	p\Rightarrow z\in A^{\ast}\Rightarrow(a)+(p)=A$. Also kann man schreiben:
+	p\Rightarrow z\in A^{*}\Rightarrow(a)+(p)=A$. Also kann man schreiben:
 	$1=ax+py$ mit $x,y\in A$. Die Multiplikation mit $b$ liefert:
 	$b=abx+pby$. Damit ist $b$ durch $p$ teilbar.
       \end{proof}
       Nun folgt die Eindeutigkeit: $a=up_{1}\cdot\dotso \cdot p_{m}=
       vq_{1}\cdot\dotso \cdot q_{n}$ wie oben. Es folgt, $p_{1}\mid
       q_{1}\cdot\dotso \cdot q_{n}$ und  o.\,B.\,d.\,A. $p_{1}\mid
-      q_{1}\Rightarrow p_{1}=uq_{1}$. Wegen $u_{1}\in A^{\ast}$ folgt
+      q_{1}\Rightarrow p_{1}=uq_{1}$. Wegen $u_{1}\in A^{*}$ folgt
       $up_{2}\cdot\dotso \cdot p_{m}=v'q_{2}\cdot\dotso \cdot q_{n}$.
     \end{enumerate}
   \end{proof}
@@ -2660,7 +2660,7 @@ Sei $A$ integer.
 \begin{bemerk}
   Die Existenz oben war schwer zu zeigen. Es gibt ordentliche Ringe ohne
   Primelementzerlegung. Sei $A$ der Ring der ganzen Funktionen auf $\C$. Die
-  Einheiten $A^{\ast}$ sind die ganzen Funktionen ohne Nullstellen. Man kann sich
+  Einheiten $A^{*}$ sind die ganzen Funktionen ohne Nullstellen. Man kann sich
   überzeugen, dass die Primelemente wie folgt aussehen: $z-z_{0}$ für alle
   $z_{0}$. Es ist klar, dass $\sin(z)$ kein Produkt einer Einheit und endlich
   vieler Primelemente. Denn der Sinus hat unendlich viele Nullstellen.
@@ -2905,7 +2905,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
   \end{enumerate}
   \begin{proof}
     Sei $f = a_0 + a_1 X + \ldots + a_n X^n_{}, a_n \neq 0, g = b_0 + b_1 X +
-    \ldots + b_d X^d, b_d \neq 0$ sowie $b_d \in A^{\ast}$.
+    \ldots + b_d X^d, b_d \neq 0$ sowie $b_d \in A^{*}$.
 
     Die trivialen Fälle sind $n = 0, d = 0 \Rightarrow r = 0, q = a_0 b_0^{-
     1}$ und $n = 0, d > 0 \Rightarrow r = f, q = 0$.
@@ -2981,7 +2981,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
    \item Sei $A=\Z/_{8\Z}, f\in A[X], f=X^{2}-1$. Dann hat $f$ vier
     Nullstellen in $A$: 1, 3, 5, 7
    \item Hohe Analogie zwischen $\Z$ und $K[X]$. Die Einheiten in $\Z$ sind
-    $\pm1$ und in $K[X]^{\ast}=K^{\ast}$. Die Primelemente in $\Z$ sind $p\in\PP$
+    $\pm1$ und in $K[X]^{*}=K^{*}$. Die Primelemente in $\Z$ sind $p\in\PP$
     und in $K[X]$ die irreduziblen Polynome. Beide Ringe sind Hauptidealringe,
     faktoriell und besitzen den \textsc{Euklid}schen Algorithmus.
   \end{enumerate}
@@ -2994,9 +2994,9 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
     $\fg=(p)$ Primideal. Wir müssen zeigen, dass $K[X]/_{(p)}$ ein
     Körper ist. Sei dazu $f\in K[X]/_{(p)}$. Wir zeigen, $f+\fg$ ist
     invertierbar. Sei $(f)+(p)=(h)$ und es folgt, $(f)\subseteq(h)\Rightarrow
-    h\mid f$. Weiter ist $p\subseteq h\Rightarrow h\mid p$. Also $h\in K^{\ast}$
-    oder $h=up$ mit $u\in K^{\ast}$. Aus $h=up$ folgt, $p\mid f$\lightning{} Alsi
-    ist $h\in K^{\ast}$ und $(f)+(p)=K[X]\ni 1\Rightarrow1=gf+qp$ mit $q,g\in
+    h\mid f$. Weiter ist $p\subseteq h\Rightarrow h\mid p$. Also $h\in K^{*}$
+    oder $h=up$ mit $u\in K^{*}$. Aus $h=up$ folgt, $p\mid f$\lightning{} Alsi
+    ist $h\in K^{*}$ und $(f)+(p)=K[X]\ni 1\Rightarrow1=gf+qp$ mit $q,g\in
     K[X]$. In $K[X]/_{\fg}$ gilt also $1=\overline{g}\overline{f}$.
   \end{proof}
 \end{fakt}
@@ -3031,7 +3031,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 
 \begin{fakt}
   Für jedes Polynom $f\in\Q[X]\setminus\{0\}$ existiert eine rationale Zahl
-  $\text{cont}(f)\in\Q^{\ast}$ so, dass $f=\text{cont}(f)\cdot f_{1}$ mit
+  $\text{cont}(f)\in\Q^{*}$ so, dass $f=\text{cont}(f)\cdot f_{1}$ mit
   $f_{1}\in\Z[X]$. Die Koeffizienten haben den größten gemeinsamen Teiler 1.
   Man bezeichnet $\text{cont}(f)$ als \highl{Inhalt} von $f$.
   \begin{proof}
@@ -3056,7 +3056,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 \end{fakt}
 
 \begin{bemerk}
-  Ist $\lambda\in\Q^{\ast}$ so gilt: $\text{cont}(\lambda
+  Ist $\lambda\in\Q^{*}$ so gilt: $\text{cont}(\lambda
   f)=\lambda\text{cont}(f)$. Denn $f=\text{cont}(f)f_{1}\Rightarrow\lambda
   f=\lambda \text{cont}(f) f_{1}$.
 \end{bemerk}
@@ -3091,7 +3091,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
   \begin{proof}
     Wir schreiben $g=\text{cont}(g)g_{1}, h=\text{cont}(h)h_{1}$. Dann folgt,
     $f=
-    \text{cont}(g)\text{cont}(h)g_{1}h_{1}\Rightarrow\underbrace{\text{cont}(f)}_{\in\N^{\ast}}=
+    \text{cont}(g)\text{cont}(h)g_{1}h_{1}\Rightarrow\underbrace{\text{cont}(f)}_{\in\N^{*}}=
     \text{cont}(g)\text{cont}(h)$.
   \end{proof}
 \end{folg}
@@ -3100,7 +3100,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
   Der Ring $\Z[X]$ ist faktoriell.
   \begin{proof}
     Sei $f\in\Z[X]\setminus\{0\}$. Dann $f=cp_{1}\dotso p_{r} \in\Q[X]$
-    irreduzibel und $c\in\Q^{\ast}$. Nach der obigen Folgerung kann man die
+    irreduzibel und $c\in\Q^{*}$. Nach der obigen Folgerung kann man die
     $p_{j}$ aus $\Z[X]$ wählen sowie $\text{cont}(p_{j})=1$ annehmen. Dann ist
     $c\in\Z\setminus\{0\}$. Die $p_{j}$ sind irreduzibel in $\Z[X]$. Damit
     folgt Existenz einer Zerlegung in Primelemente.
@@ -3108,7 +3108,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
     Die Eindeutigkeit folgt: $cp_{1}\dotso p_{m}=dq_{1}\dotso q_{n}$ mit
     $c,d\in\Z\setminus\{0\}, p_{i}, q_{j}\in\Z[X]$ mit Inhalt 1 und
     irreduzibel. In $\Q[X]$ nachschauen zeigt, $m=n, p_{i}=\lambda_{i} q_{i},
-    \lambda_{i}\in\Q^{\ast}\Rightarrow 1=\lambda_{i}1 \Rightarrow \lambda_{i}=1
+    \lambda_{i}\in\Q^{*}\Rightarrow 1=\lambda_{i}1 \Rightarrow \lambda_{i}=1
     \Rightarrow c=d$.
   \end{proof}
 \end{folg}
@@ -3392,8 +3392,8 @@ Wir hatten für Ringhomomorphismen verlangt $f(1)=1$.
     Dann ist der Kern ein Primideal in $\Z$, d.\,h. $\ker(\varphi) = (p) =
       p\Z$ mit $p \in \PP$. Nach dem Homomorphiesatz
       (\autoref{satz:1-homoring})
-      erhalten wir die Injektion $\varphi_{\ast}\colon \Z/_{(p)} \rightarrow
-      K$. Das Bild von $\varphi_{\ast}$ ist der kleinste Teilkörper in $K$
+      erhalten wir die Injektion $\varphi_{*}\colon \Z/_{(p)} \rightarrow
+      K$. Das Bild von $\varphi_{*}$ ist der kleinste Teilkörper in $K$
       (wie oben), $\Z/_{(p)} =\F_p$.
   \end{enumerate}
 \end{proof}
@@ -3828,9 +3828,9 @@ Im folgenden betrachten wir nun die Eindeutigkeit (zweiter Punkt des Satzes).
     K[X]\rightarrow L, f\mapsto f(\alpha_{i})$. Dies ist ein Homomorphismus
     zund ist auf $K$ gleich $\sigma$. Das irreduzible Polynom
     $\Irr(X,\alpha,K)$ geht dabei auf 0. Mithin erhalten wir einen
-    Homomorphismus von $\sigma_{\ast}\colon K[X]/_{(\Irr(X,\alpha,K))}\rightarrow
+    Homomorphismus von $\sigma_{*}\colon K[X]/_{(\Irr(X,\alpha,K))}\rightarrow
     L$. Wir haben einen Isomorphismus $E\rightarrow K[X]/_{\Irr(X,\alpha,K)}$.
-    Dabei geht $\alpha$ auf $X+(\Irr)$, unter $\sigma_{\ast}$ geht $X+(\Irr)$ auf
+    Dabei geht $\alpha$ auf $X+(\Irr)$, unter $\sigma_{*}$ geht $X+(\Irr)$ auf
     $\alpha_{i}$.
 
     Wir zeigen nun: Jeder Homomorphismus $\tau\colon E\rightarrow L$ hat diese
@@ -4232,8 +4232,8 @@ Menge der Einlagerungen.
 \section{Endliche Körper}
 
 Jeder endliche Körper F hat als Primkörper ein $\F_{p}$. Also hat $F$ die
-Ordnung $p^{n}$ für $n\geq1$. Insbesondere ist die Gruppe $F^{\ast}$ der
-Ordnung $p^{n}-1$. Also ist jedes Element aus $F^{\ast}$ Wurzel des Polynoms
+Ordnung $p^{n}$ für $n\geq1$. Insbesondere ist die Gruppe $F^{*}$ der
+Ordnung $p^{n}-1$. Also ist jedes Element aus $F^{*}$ Wurzel des Polynoms
 $f(X)=X^{q-1}-1$ mit $q=p^{n}, f\in\F_{p}[X]$. Es folgt, jedes Element $x\in
 F$ ist Wurzel von $X^{q}-X\in\F_{p}[X]$. Alle Zerfällungskörper eines festen
 Polynoms sind isomorph. Also gibt es höchstens bis auf Isomorphie einen Körper
@@ -4285,7 +4285,7 @@ Seien $\alpha, \beta\in\overline{\F}_{p}$ Wurzeln. Es ist
 
 \begin{bsp}
   Was ist $\F_{25}$? Es ist $[\F_{25}\colon\F_{5}]=2$. Welche Quadrate gibt es
-  in $\F_{5}^{\ast}$? Da gibt es nur die zwei Quadrate 1 und 4. Also ist
+  in $\F_{5}^{*}$? Da gibt es nur die zwei Quadrate 1 und 4. Also ist
   $\F_{25}$ der Zerfällungskörper von $f(X)=X^{2}-2$. Sei
   $\alpha\in\overline\F_{5}$ Wurzel von $f$. Dann ist $\F_{25}=\{a+bx\colon
   a,b\in\F_{5}\}$. Die Addition ist:
@@ -4324,9 +4324,9 @@ Der Satz kam in der Vorlesung erst nach dem Beispiel mit $p=13$.
 %satz 16
 %satz 15 kommt später
 \begin{satz}
-  Die multiplikative Gruppe $\F_{p}^{\ast}$ von $\F_{p}$ ist zyklisch.
+  Die multiplikative Gruppe $\F_{p}^{*}$ von $\F_{p}$ ist zyklisch.
   \begin{proof}
-    Es ist $\F_{p}^{\ast}= \bigoplus_{l|q-1} A(l)$ mit $l\in\PP$. Es genügt zu
+    Es ist $\F_{p}^{*}= \bigoplus_{l|q-1} A(l)$ mit $l\in\PP$. Es genügt zu
     zeigen, dass alle $A(l)$ zyklisch sind.
 
     Sei $x\in A(l)$ von maximaler Ordnung, sagen wir wir $x^{l^{r}}=1$ und
@@ -4394,7 +4394,7 @@ Der Satz kam in der Vorlesung erst nach dem Beispiel mit $p=13$.
 \end{bsp}
 
 \begin{bemerk}
-  $\F_{p}^{\ast}$ ist die prime Restklassengruppe modulo $p$ und zyklisch nach
+  $\F_{p}^{*}$ ist die prime Restklassengruppe modulo $p$ und zyklisch nach
   \textsc{Gauss}. Die Erzeuger der Gruppe nennt man \highl{Primitivwurzel}n.
   Es gibt $\phi(p-1)$ viele.
 \end{bemerk}
@@ -4433,7 +4433,7 @@ Der Satz kam in der Vorlesung erst nach dem Beispiel mit $p=13$.
   \highl[Element!primitives]{primitives Element}.
   \begin{proof}
     \begin{enumerate}[1. F{a}ll]
-     \item Sei $K$ endlich. Dann ist $E^{\ast}$ zyklisch. Jedes Erzeugende ist
+     \item Sei $K$ endlich. Dann ist $E^{*}$ zyklisch. Jedes Erzeugende ist
       primitives Element.
      \item Sei $K$ unendlich. Dann ist $E$ endlich erzeugt/$K$:
       $E=K(\alpha_{1},\dotsc,\alpha_{n})$. Sei zuerst $E=K(\alpha, \beta)$ mit
@@ -4730,7 +4730,7 @@ fest. Damit folgt $\sigma=\iota$ (Identität).
 \subsection{Ein numerisches Beispiel}
 Sei $k=\Q, f=X^{4}-2\in\Q[X], \overline{k}= \overline{\Q}\subseteq\C$. Das
 Polynom $f$ ist irreduzibel in $\Q$ mit den Wurzeln:
-$\alpha=\sqrt[4]{2}\in\R^{\ast}_{+}, i\alpha, -\alpha, -i\alpha$. Nach der
+$\alpha=\sqrt[4]{2}\in\R^{*}_{+}, i\alpha, -\alpha, -i\alpha$. Nach der
 allgemeinen Theorie ist $[\Q(\alpha)\colon\Q]= 4$. Sei $K$ der
 Zerfällungskörper von $f$. Dann ist $i\in K$. Also $\Q(\alpha, i)\subset K$.
 Alle vier Wurzeln sind schon in $\Q(\alpha,i)$, also $K=\Q(\alpha,i)$ und es
@@ -4947,7 +4947,7 @@ Sei $f=X^{n}-1\in k([X])$.
    \item Die Erzeugenden von $\mu_{n}$ heißen
     \highl[Einheitswurzel|primitive]{primitive $n$"~te Einheitswurzeln}. Es
     gibt $\phi(n)$ viele. Ist $\zeta\in\mu_{n}$ primitive $n$"~te
-    Einheitswurzel, so auch $\zeta^{a}$ für alle $a\in(\Z/_{n\Z})^{\ast}$.
+    Einheitswurzel, so auch $\zeta^{a}$ für alle $a\in(\Z/_{n\Z})^{*}$.
    \item Es folgt $\sum_{d\mid n} \phi(d)=n$.
    \item Für jede primitive $n$"~te Einheitswurzel $\zeta\in\mu_{n}$ erhält
     man durch $\Z/_{n\Z}\rightarrow\mu, a\mapsto\zeta^{a}$ einen
@@ -4977,7 +4977,7 @@ Sei $f=X^{n}-1\in k([X])$.
     $\Z/_{n\Z}$.
 
     Wir erhalten eine Abbildung
-    $a\colon\Gal(k(\mu_{n}/_{k})\rightarrow(\Z/_{n\Z})^{\ast}), \sigma\mapsto
+    $a\colon\Gal(k(\mu_{n}/_{k})\rightarrow(\Z/_{n\Z})^{*}), \sigma\mapsto
     a(\sigma)$. Die Abbildung ist injektiv und homomorph:
     $\zeta^{a(\sigma)a(\tau)}= \tau(\zeta^{a(\sigma)}= \tau\sigma\zeta=
     \zeta^{a(\sigma\tau)}$.
@@ -4987,7 +4987,7 @@ Sei $f=X^{n}-1\in k([X])$.
 \begin{bemerk}
   \begin{enumerate}
    \item Für $k=\Q$ gilt sogar
-    $\Gal(\Q(\mu_{n})/_{\Q})\cong(\Z/_{n\Z})^{\ast}$.
+    $\Gal(\Q(\mu_{n})/_{\Q})\cong(\Z/_{n\Z})^{*}$.
    \item Satz von \textsc{Kronecker"=Weber}: Jede abelsche Erweiterung
     $K/_{\Q}$ ist enthalten in einem geeigneten $\Q(\mu_{n})$. Das kleinste
     $n$ heißt \highl{\textsc{Artin}"~Führer} der Erweiterung.
@@ -5264,7 +5264,7 @@ Sei $\mu_{n}\in k, a\in k, f=X^{n}-a\in k[X]$.
     hat. Somit hat $G$ eine zyklische 5-\textsc{Sylow}"~Gruppe, d.\,h. $G$
     enthält Transposition und 5"~Zyklus. Sei o.\,B.\,d.\,A. die Transposition
     $(1,2)$. Der 5"~Zyklus ist $(1,a,b,c,d)$. Eine geeignete Potenz ist dann
-    $(1,2,\ast,\ast,\ast)$. Wir nennen $\ast, \ast, \ast$ der Reihe nach 3, 4,
+    $(1,2,*,*,*)$. Wir nennen $*, *, *$ der Reihe nach 3, 4,
     5. Also $(1,2,3,4,5)\in G$. Wir bezeichnen $\sigma=(1,2), \tau=
     (1,2,3,4,5)$. Es ist $\tau^{a}\sigma\tau^{-a}= (\tau^{a}(1), \tau^{a}(2))=
     (a+1, a+2)$. Also $(2,3)(3,4)(4,5)\in G\Rightarrow G=S_{5}$. Damit folgt,
@@ -5416,8 +5416,8 @@ zwischen den beiden Seiten gegeben, so ist das Dreieck konstruierbar.
 \begin{bsp}
   \begin{enumerate}
    \item $\Topo\rightarrow\Ens$ \highl{Vergissfunktor} Kovarianz
-   \item $\VEC_{K}\rightarrow\VEC_{K}\colon V\rightarrow V^{\ast}$ (Dualraum),
-    $V\xrightarrow{f} W\mapsto W^{\ast}\xrightarrow{f^{\ast}}V^{\ast}$
+   \item $\VEC_{K}\rightarrow\VEC_{K}\colon V\rightarrow V^{*}$ (Dualraum),
+    $V\xrightarrow{f} W\mapsto W^{*}\xrightarrow{f^{*}}V^{*}$
    \item Hauptsatz der \textsc{Galois}"~Theorie (\autoref{satz:theogal}): Zwei
     kleine Kategorien: Zwischenkörper und Inklusionen, Untergruppen und
     Inklusionen. Dann haben wir zwei kontravariante Funktoren, welche invers
