--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -992,7 +992,7 @@ Eigenschaft: $G = S_3, N=\{\iota, (1, 2)\}$, z.\,B. $(1, 3) (1, 2) (1, 3)^{-
 1} = (1, 3) (1, 2) (1, 3) = (2, 3) \notin N$.
 
 \begin{defini}
-  Eine Untergruppe $H \subseteq G$ mit der Eigenschaft $sGs^{- 1} = H$ für
+  Eine Untergruppe $H \subseteq G$ mit der Eigenschaft $sHs^{- 1} = H$ für
   alle $s \in G$ heißt \highl{Normalteiler} von $G$.
   
   äquivalent: $sH = Hs$
